Add Customer complete data, Upload image cloudinary url, and logic for application loan